[gd_scene load_steps=3 format=3 uid="uid://b5xqj8yv3bwfk"]

[ext_resource type="Script" path="res://custom_graph/custom_graph_test.gd" id="1_a8c9h"]
[ext_resource type="Script" path="res://custom_graph/custom_graph_view.gd" id="2_view"]

[node name="CustomGraphTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a8c9h")

[node name="CustomGraphView" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_view")

[node name="ToolPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 120.0

[node name="AddNumberButton" type="Button" parent="ToolPanel"]
layout_mode = 2
text = "Add Number Node"

[node name="AddOperationButton" type="Button" parent="ToolPanel"]
layout_mode = 2
text = "Add Operation Node"

[node name="InstructionsPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 210.0
grow_horizontal = 0

[node name="InstructionsLabel" type="Label" parent="InstructionsPanel"]
layout_mode = 2
text = "Instructions will appear here"
autowrap_mode = 2

[connection signal="connection_created" from="CustomGraphView" to="." method="_on_connection_created"]
[connection signal="connection_removed" from="CustomGraphView" to="." method="_on_connection_removed"]
[connection signal="pressed" from="ToolPanel/AddNumberButton" to="." method="_on_add_number_button_pressed"]
[connection signal="pressed" from="ToolPanel/AddOperationButton" to="." method="_on_add_operation_button_pressed"]
